Support multiple scales,offsets for retinanet NMS

--- a/cm-mlops/script/app-mlperf-inference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference/_cm.yaml
@@ -310,6 +310,8 @@ variations:
       skip_if_env:
         CM_MLPERF_IMPLEMENTATION:
         - nvidia-original
+        - reference
+        - kilt
       names:
       - mlperf-accuracy-script
       - openimages-accuracy-script
