cleaning universal benchmarking with loadgen
Former-commit-id: f35db511ceb123f89ce7115252cd928747ebb64b

--- a/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
+++ b/cm-mlops/script/app-loadgen-generic-python/_cm.yaml
@@ -32,6 +32,7 @@ input_mapping:
   interop: CM_MLPERF_INTEROP
   execmode: CM_MLPERF_EXEC_MODE
   modelpath: CM_ML_MODEL_FILE_WITH_PATH
+  samples: CM_MLPERF_LOADGEN_SAMPLES
 
 new_env_keys:
   - CM_MLPERF_*
