--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -2,6 +2,7 @@
 alias: reproduce-mlperf-inference-intel
 uid: c05a90433bb04cc1
 cache: false
+can_force_cache: true
 
 automation_alias: script
 automation_uid: 5b4e0237da074764
@@ -63,15 +64,6 @@ new_state_keys:
   - mlperf-inference-implementation
   - CM_SUT_*
 
-# Env keys which are exposed to higher level scripts
-new_env_keys:
-  - CM_MLPERF_*
-  - CM_DATASET_*
-  - CM_HW_NAME
-  - CM_ML_MODEL_*
-  - CM_MAX_EXAMPLES
-  - CM_IMAGENET_ACCURACY_DTYPE
-  - CM_SQUAD_ACCURACY_DTYPE
 
 
 # Dependencies on other CM scripts
@@ -93,11 +85,11 @@ deps:
     names:
     - mlperf-logging
 
+  - tags: get,conda,_name.bert-pt
   - tags: get,generic,conda-package,_package.python
     version: "3.8"
   - tags: get,generic-sys-util,_numactl
   - tags: get,generic,conda-package,_package.jemalloc,_source.conda-forge
-  - tags: get,onednn,from.src,_for-intel-mlperf-inference
 
   ########################################################################
   # Install ResNet50 model (ONNX) and ImageNet
@@ -128,25 +120,6 @@ deps:
 
 
   ########################################################################
-  # Install bert dependencies
-
-  - enable_if_env:
-      CM_MODEL:
-      - bert-99
-      - bert-99.9
-    names:
-      - bert-vocab
-    tags: get,squad-vocab
-
-  - enable_if_env:
-      CM_MODEL:
-      - bert-99
-      - bert-99.9
-    names:
-      - squad-tokenized
-    tags: get,dataset,tokenized,squad,_raw
-
-  ########################################################################
   # Install OpenImages
 
   - enable_if_env:
@@ -169,32 +142,12 @@ deps:
   ########################################################################
   # Install MLPerf inference dependencies
 
-  # Download MLPerf inference source
-  - tags: get,mlcommons,inference,src
-    names:
-    - inference-src
-
-  # Download MLPerf inference loadgen
-  - tags: get,mlcommons,inference,loadgen
-    names:
-    - inference-loadgen
-
-  # Creates user conf for given SUT
-  - tags: generate,user-conf,mlperf,inference
-    names:
-    - user-conf-generator
-
+  - tags: get,mlperf,inference,results
+    version: v3.1
 
 
 # Post dependencies to run this app including for power measurement
 post_deps:
-
-  - names:
-    - compile-program
-    tags: compile,cpp-program
-    skip_if_env:
-      CM_MLPERF_SKIP_RUN:
-        - yes
 
   - names:
     - runner
@@ -224,7 +177,7 @@ variations:
       CM_MLPERF_BACKEND_LIB_NAMESPEC: pytorch
     deps:
     - tags: get,pytorch,from.src,_for-intel-mlperf-inference
-    - tags: get,onednn,from.src,_for-intel-mlperf-inference
+    - tags: install,onednn,from.src,_for-intel-mlperf-inference
 
 
 
@@ -273,7 +226,6 @@ variations:
 
   bert_:
     deps:
-    - tags: get,generic-python-lib,_onnx
     - tags: install,transformers,from.src,_for-intel-mlperf-inference
     env:
       CM_BENCHMARK: STANDALONE_BERT
@@ -283,20 +235,20 @@ variations:
 
 
   standalone:
-    group: run-mode
+    group: network-mode
     default: true
     env:
-      CM_RUN_MODE: standalone
+      CM_MLPERF_NETWORK_RUN_MODE: standalone
 
   network-server:
-    group: run-mode
+    group: network-mode
     env:
-      CM_RUN_MODE: network-server
+      CM_MLPERF_NETWORK_RUN_MODE: network-server
 
   network-client:
-    group: run-mode
+    group: network-run-mode
     env:
-      CM_RUN_MODE: network-client
+      CM_MLPERF_NETWORK_RUN_MODE: network-client
 
   bert_,network-server:
     env:
@@ -331,6 +283,67 @@ variations:
     env:
       CM_MODEL_BATCH_SIZE: "#"
       #CM_MLPERF_SUT_NAME_RUN_CONFIG_SUFFIX1: "activation_count.#"
+
+  build_harness:
+    group: run-mode
+    deps:
+      - tags: get,generic-sys-util,_rsync
+      - tags: install,llvm,from.src,_for-intel-mlperf-inference
+    env:
+      CM_LOCAL_MLPERF_INFERENCE_INTEL_RUN_MODE: build_harness
+    new_env_keys:
+      - CM_MLPERF_INFERENCE_INTEL_HARNESS_PATH
+      - DATA_PATH
+
+  build_harness,bert_:
+    deps:
+      - tags: get,dataset,original,squad
+        names:
+          - squad-original
+      - tags: get,ml-model,bert-large,_pytorch,_int8
+        names:
+          - bert-large
+          - ml-model
+      - tags: get,generic-python-lib,_package.tokenization 
+
+
+  run_harness:
+    group: run-mode
+    default: true
+    deps:
+      - tags: reproduce,mlperf,inference,intel,harness,_build_harness
+        inherit_variation_tags: true
+        names:
+          - build-harness
+        skip_inherit_variation_groups:
+          - run-mode
+          - device-info
+        force_cache: true
+  
+      # Download MLPerf inference source
+      - tags: get,mlcommons,inference,src
+        names:
+        - inference-src
+
+      # Creates user conf for given SUT
+      - tags: generate,user-conf,mlperf,inference
+        names:
+        - user-conf-generator
+
+    env:
+      CM_LOCAL_MLPERF_INFERENCE_INTEL_RUN_MODE: run_harness
+
+    # Env keys which are exposed to higher level scripts
+    new_env_keys:
+      - CM_MLPERF_*
+      - CM_DATASET_*
+      - CM_HW_NAME
+      - CM_ML_MODEL_*
+      - CM_MAX_EXAMPLES
+      - CM_IMAGENET_ACCURACY_DTYPE
+      - CM_SQUAD_ACCURACY_DTYPE
+
+
 
   maxq:
     group: power-mode
