--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -84,10 +84,13 @@ deps:
   - tags: get,generic-python-lib,_mlperf_logging
     names:
     - mlperf-logging
-  - tags: get,generic-sys-util,_libffi7
 
   - tags: get,conda,_name.bert-pt
+  - tags: install,llvm,src,_tag.llvmorg-15.0.7,_runtimes.libcxx:libcxxabi:openmp,_clang,_release,_for-intel-mlperf-inference
   - tags: get,generic,conda-package,_package.python
+    names:
+     - conda-package
+     - python
     version: "3.8"
   - names:
      - conda-package
@@ -96,6 +99,9 @@ deps:
  
   - tags: get,generic-sys-util,_numactl
   - tags: get,generic,conda-package,_package.jemalloc,_source.conda-forge
+    names:
+     - conda-package
+     - jemalloc
 
   ########################################################################
   # Install ResNet50 model (ONNX) and ImageNet
