Fix starting_weights_file_name, audit_tests for intel implementation
Former-commit-id: d6636444f03f071bd36c615d8df7d9fb6f7b31aa

--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -309,6 +309,7 @@ variations:
       CM_LOCAL_MLPERF_INFERENCE_INTEL_RUN_MODE: build_harness
     new_env_keys:
       - CM_MLPERF_INFERENCE_INTEL_HARNESS_PATH
+      - CM_ML_MODEL_*
       - DATA_PATH
 
   build_harness,bert_:
