--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -247,6 +247,27 @@ variations:
     - tags: install,onednn,from.src,_for-intel-mlperf-inference-v3.1-bert
     - tags: install,transformers,from.src,_for-intel-mlperf-inference-v3.1-bert
 
+  gptj_,pytorch:
+    - tags: get,conda,_name.gptj-pt
+    - tags: get,generic,conda-package,_package.python
+      names:
+       - conda-package
+       - python
+      version: "3.9"
+    - tags: install,llvm,src,_tag.llvmorg-16.0.6,_clang,_release,_for-intel-mlperf-inference-v3.1-gptj
+    - names:
+       - conda-package
+       - ncurses
+      tags: get,generic,conda-package,_package.ncurses,_source.conda-forge
+ 
+    - tags: get,generic-sys-util,_numactl
+    - tags: get,generic,conda-package,_package.jemalloc,_source.conda-forge
+      names:
+       - conda-package
+       - jemalloc
+    - tags: get,pytorch,from.src,_for-intel-mlperf-inference-v3.1-bert
+    - tags: install,onednn,from.src,_for-intel-mlperf-inference-v3.1-bert
+    - tags: install,transformers,from.src,_for-intel-mlperf-inference-v3.1-bert
   standalone:
     group: network-mode
     default: true
