Fix deps for bert reference implementation
Former-commit-id: f56cca3e52e6f4b51c0417a17ff37813715ef078

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -570,11 +570,7 @@ posthook_deps:
     tags: benchmark-mlperf
     skip_if_env:
       CM_MLPERF_SKIP_RUN:
-      - on
-
-
-
-
+      - "on"
 
 
 
@@ -817,6 +813,7 @@ variations:
       version_max: "1.10.9"
     - tags: get,generic-python-lib,_tokenization
     - tags: get,generic-python-lib,_six
+    - tags: get,generic-python-lib,_package.absl-py
     - tags: get,generic-python-lib,_protobuf
       names:
       - protobuf
