--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -282,6 +282,11 @@ variations:
         - inference-loadgen
         env:
           CM_PYTHON_BIN_WITH_PATH: "<<<CM_CONDA_BIN_PATH>>>/python3"
+      - tags: get,ml-model,large-language-model,gptj
+        names:
+        - ml-model
+        - gptj-model
+        - gpt-j-model
 
   gptj-99:
     group: model
