--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -225,27 +225,28 @@ variations:
       loadgen_dataset_size: 10833
 
   bert_,pytorch:
-    - tags: get,conda,_name.bert-pt
-    - tags: install,llvm,src,_tag.llvmorg-15.0.7,_runtimes.libcxx:libcxxabi:openmp,_clang,_release,_for-intel-mlperf-inference-v3.1-bert
-    - tags: get,generic-sys-util,_libffi7
-    - tags: get,generic,conda-package,_package.python
-      names:
-       - conda-package
-       - python
-      version: "3.8"
-    - names:
-       - conda-package
-       - ncurses
-      tags: get,generic,conda-package,_package.ncurses,_source.conda-forge
+    deps:
+      - tags: get,conda,_name.bert-pt
+      - tags: install,llvm,src,_tag.llvmorg-15.0.7,_runtimes.libcxx:libcxxabi:openmp,_clang,_release,_for-intel-mlperf-inference-v3.1-bert
+      - tags: get,generic-sys-util,_libffi7
+      - tags: get,generic,conda-package,_package.python
+        names:
+        - conda-package
+        - python
+        version: "3.8"
+      - names:
+        - conda-package
+        - ncurses
+        tags: get,generic,conda-package,_package.ncurses,_source.conda-forge
  
-    - tags: get,generic-sys-util,_numactl
-    - tags: get,generic,conda-package,_package.jemalloc,_source.conda-forge
-      names:
-       - conda-package
-       - jemalloc
-    - tags: get,pytorch,from.src,_for-intel-mlperf-inference-v3.1-bert
-    - tags: install,onednn,from.src,_for-intel-mlperf-inference-v3.1-bert
-    - tags: install,transformers,from.src,_for-intel-mlperf-inference-v3.1-bert
+      - tags: get,generic-sys-util,_numactl
+      - tags: get,generic,conda-package,_package.jemalloc,_source.conda-forge
+        names:
+        - conda-package
+        - jemalloc
+      - tags: get,pytorch,from.src,_for-intel-mlperf-inference-v3.1-bert
+      - tags: install,onednn,from.src,_for-intel-mlperf-inference-v3.1-bert
+      - tags: install,transformers,from.src,_for-intel-mlperf-inference-v3.1-bert
 
   gptj_:
     env:
