improved "cm docker script" to automatically/transparently mount local files and paths
Former-commit-id: 317d6f535c59ec9622b503468b11235f3da382b1

--- a/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
+++ b/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
@@ -63,11 +63,9 @@ docker:
   all_gpus: 'yes'
   input_paths:
     - input
-  env_paths:
-    - CM_IMAGE
+    - env.CK_IMAGE
   skip_input_for_fake_run:
     - input
-  skip_env_for_fake_run:
-    - CM_IMAGE
+    - env.CK_IMAGE
   pre_run_cmds:
     - echo \"CM pre run commands\"
