--- a/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
@@ -121,7 +121,7 @@ deps:
       - retinanet
     names:
       - openimages-preprocessed
-    tags: get,dataset,preprocessed,openimages,_validation,_NCHW
+    tags: get,dataset,preprocessed,openimages,_validation,_NCHW,_custom-annotations
 
   - enable_if_env:
       CM_MODEL:
