Fix for retinanet cpp
Former-commit-id: bac305e36515dbbb524f3e1a6e6956776c54938a

--- a/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
@@ -121,7 +121,7 @@ deps:
       - retinanet
     names:
       - openimages-preprocessed
-    tags: get,dataset,preprocessed,openimages,_validation,_NCHW,_custom-annotations
+    tags: get,dataset,preprocessed,openimages,_validation,_NCHW
 
   - enable_if_env:
       CM_MODEL:
