fixed CM StreamLit GUI

--- a/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
+++ b/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
@@ -69,6 +69,17 @@ new_state_keys:
   - cm_app_image_classification_onnx_py
 
 
+gui_title: "CM GUI for the MLPerf inference benchmark"
+
+input_description:
+  input: 
+    desc: "Path to JPEG image to classify"
+  output: 
+    desc: "Output directory (optional)"
+  j:
+    desc: "Print JSON output"
+    boolean: true
+
 docker:
   skip_run_cmd: 'no'
   all_gpus: 'yes'
