--- a/cm-mlops/script/install-mlperf-logging-from-src/_cm.yaml
+++ b/cm-mlops/script/install-mlperf-logging-from-src/_cm.yaml
@@ -1,4 +1,4 @@
-alias: install-mlperf-logging-from.src
+alias: install-mlperf-logging-from-src
 automation_alias: script
 automation_uid: 5b4e0237da074764
 cache: true
