--- a/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
+++ b/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
@@ -3,7 +3,9 @@ automation_alias: script
 automation_uid: 5b4e0237da074764
 cache: false
 category: MLPerf benchmark support
-deps: []
+deps:
+  - tags: detect,cpu
+
 docker_input_mapping: {}
 input_description: {}
 input_mapping: {}
@@ -88,7 +90,7 @@ variations:
     env:
       IMPLEMENTATION: tflite_cpp
     default_env:
-      MODELS: mobilenet,efficientnet
+      MODELS: mobilenets
       CATEGORY: edge
       DIVISION: open
       BACKENDS: tflite
