--- a/cm-mlops/script/run-all-mlperf-models/_cm.yaml
+++ b/cm-mlops/script/run-all-mlperf-models/_cm.yaml
@@ -1,24 +1,18 @@
+uid: 8d3cd46f54464810
 alias: run-all-mlperf-models
+
 automation_alias: script
 automation_uid: 5b4e0237da074764
+
 cache: false
+
 category: MLPerf benchmark support
-deps: []
-docker_input_mapping: {}
-input_description: {}
-input_mapping: {}
-new_env_keys: []
-new_state_keys: []
-post_deps: []
-posthook_deps: []
-prehook_deps: []
-tags: [
-  "run",
-  "natively",
-  "all",
-  "mlperf-models"
-]
-uid: 8d3cd46f54464810
+
+tags:
+- run
+- natively
+- all
+- mlperf-models
 
 variations:
 
@@ -134,5 +128,3 @@ variations:
     env:
       CATEGORY: edge
       DIVISION: closed
-
-versions: {}
