added "create-patch" automation recipe; cleaned up some reproducibility studies

--- a/cm-mlops/script/reproduce-ipol-paper-2022-439/_cm.yaml
+++ b/cm-mlops/script/reproduce-ipol-paper-2022-439/_cm.yaml
@@ -22,6 +22,9 @@ deps:
 - tags: get,generic-python-lib,_torch
   names:
   - torch
+- tags: get,generic-python-lib,_torchvision
+  names:
+  - torchvision
 
 tags:
 - app
