Added some default variations for sdxl

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -840,6 +840,7 @@ variations:
     group: models
     env:
       CM_MODEL: stable-diffusion-xl
+      CM_NUM_THREADS: "1"
     deps:
       - tags: get,generic-python-lib,_package.diffusers
         names:
