Added win32 for windows power server
Former-commit-id: 54086451c42a6bb8de0444b7e21e441fd748c091

--- a/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
+++ b/cm-mlops/script/benchmark-any-mlperf-inference-implementation/_cm.yaml
@@ -5,13 +5,17 @@ cache: false
 category: MLPerf benchmark support
 deps:
   - tags: detect,cpu
-
+default_env:
+  DIVISION: open
+  CATEGORY: edge
 docker_input_mapping: {}
 input_description: {}
 input_mapping:
   models: MODELS
   backends: BACKENDS
   devices: DEVICES
+  division: DIVISION
+  category: CATEGORY
   power_server: POWER_SERVER
   power_server_port: POWER_SERVER_PORT
 new_env_keys: []
