Support default_variations in combined variations
Former-commit-id: 849333d310afcfeae162da4ef9bd42d62245a4a2

--- a/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-cpp/_cm.yaml
@@ -245,5 +245,13 @@ variations:
       CM_MLPERF_LOADGEN_SCENARIO: Server
 
   multistream,resnet50:
-    env:
-      CM_MLPERF_LOADGEN_MAX_BATCHSIZE: 8
+    default_variations:
+      batch-size: batch-size.8
+
+  offline,resnet50:
+    default_variations:
+      batch-size: batch-size.8
+
+  multistream,retinanet:
+    default_variations:
+      batch-size: batch-size.1
