--- a/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
+++ b/cm-mlops/script/app-image-classification-onnx-py/_cm.yaml
@@ -73,7 +73,7 @@ variations:
     group: target
     default: yes
     env:
-      USE_CUDA: yes
+      USE_CPU: yes
 
 input_mapping:
   input: CM_IMAGE
