--- a/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-nvidia/_cm.yaml
@@ -300,7 +300,7 @@ variations:
     env:
       CM_MODEL: resnet50
     deps:
-    - tags: get,generic-python-lib,_graphsurgeon
+    - tags: get,generic-python-lib,_onnx-graphsurgeon
     - tags: get,generic-python-lib,_package.onnx
       version: 1.13.1
 
@@ -316,7 +316,7 @@ variations:
     - tags: get,generic-python-lib,_opencv-python
     - tags: get,generic-python-lib,_numpy
     - tags: get,generic-python-lib,_pycocotools
-    - tags: get,generic-python-lib,_graphsurgeon
+    - tags: get,generic-python-lib,_onnx-graphsurgeon
     - tags: get,generic-python-lib,_package.onnx
       version: 1.13.1
 
