Use ctuning fork for intel mlperf inference
Former-commit-id: 780b556ff06b441b14446dd81efafd06c0b08d14

--- a/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
+++ b/cm-mlops/script/reproduce-mlperf-inference-intel/_cm.yaml
@@ -137,7 +137,7 @@ deps:
   ########################################################################
   # Install MLPerf inference dependencies
 
-  - tags: get,mlperf,inference,results
+  - tags: get,mlperf,inference,results,_ctuning
     names:
       inference-results
     version: v3.1
