Added dependencies for llama2
Former-commit-id: d821d473ee283fd8f7cf1f56dae1a756c5f4660d

--- a/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
+++ b/cm-mlops/script/app-mlperf-inference-reference/_cm.yaml
@@ -873,6 +873,15 @@ variations:
       - tags: get,generic-python-lib,_package.datasets
         names:
           - datasets
+      - tags: get,generic-python-lib,_package.sentencepiece
+        names:
+          - sentencepiece
+      - tags: get,generic-python-lib,_package.protobuf
+        names:
+          - protobuf
+      - tags: get,generic-python-lib,_package.accelerate
+        names:
+          - accelerate
 
   llama2-70b-99:
     group: models
