Avoid add,custom,system script in nvidia-docker

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -136,8 +136,9 @@ post_deps:
       - "no"
       - False
       - "False"
-
-
+    enable_if_env:
+      CM_RUN_STATE_DOCKER:
+      - False
 
 variations:
   # Target devices
