Support run_deps for docker (WIP)
Former-commit-id: fc092898316be47994363846466548660a886635

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -228,6 +228,8 @@ docker:
     tensorrt_tar_file_path: CM_TENSORRT_TAR_FILE_PATH
     cuda_run_file_path: CUDA_RUN_FILE_LOCAL_PATH
     scratch_path: MLPERF_SCRATCH_PATH
+  deps:
+    - tags: get,mlperf,inference,nvidia,scratch,space
   mounts:
    - "${{ IMAGENET_PATH }}:/data/imagenet-val"
    - "${{ RESULTS_DIR }}:/home/cmuser/results_dir"
