--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -234,6 +234,7 @@ docker:
     - tags: get,mlperf,inference,submission,dir
   pre_run_cmds:
     - cm pull repo ctuning@mlcommons-ck
+    - sudo apt remove -y cmake
   mounts:
    - "${{ IMAGENET_PATH }}:/data/imagenet-val"
    - "${{ CM_MLPERF_INFERENCE_RESULTS_DIR }}:${{ CM_MLPERF_INFERENCE_RESULTS_DIR }}"
