run cudnn and tensorrt inside docker
Former-commit-id: b09303e94a251b46d2cba8b47430fa631988a153

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -233,7 +233,7 @@ docker:
     - tags: get,mlperf,inference,results,dir
     - tags: get,mlperf,inference,submission,dir
   pre_run_cmds:
-    - cm pull repo ctuning@mlcommons-ck
+    - cd CM/repos/ctuning@mlcommons-ck && git pull
     - sudo apt remove -y cmake
   mounts:
    - "${{ IMAGENET_PATH }}:/data/imagenet-val"
