Fixes for pytorch build inside docker

--- a/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
+++ b/cm-mlops/script/build-mlperf-inference-server-nvidia/_cm.yaml
@@ -234,7 +234,7 @@ docker:
     - tags: get,mlperf,inference,submission,dir
   pre_run_cmds:
     - cd CM/repos/ctuning@mlcommons-ck && git pull
-    - sudo apt remove -y cmake
+  run_cmd_prefix: sudo apt remove -y cmake && cd CM/repos/ctuning@mlcommons-ck && git pull && cd -
   mounts:
    - "${{ IMAGENET_PATH }}:/data/imagenet-val"
    - "${{ CM_MLPERF_INFERENCE_RESULTS_DIR }}:${{ CM_MLPERF_INFERENCE_RESULTS_DIR }}"
